force-app/main/default/objects/Archived_Activities__x/Archived_Activities__x.object-meta.xml
<CustomObject>
    <description>public$archived_activities</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$archived_activities</externalName>
    <label>Archived Activity</label>
    <pluralLabel>Archived Activities</pluralLabel>
</CustomObject>