force-app/main/default/objects/Archived_Activities__x/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <description>account_id</description>
    <externalDeveloperName>account_id</externalDeveloperName>
    <label>Account</label>
    <length>18</length>
    <referenceTargetField>Account.AccountId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Activities</relationshipLabel>
    <relationshipName>Archived_Activities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>