force-app/main/default/objects/Archived_Activities__x/fields/activity_id__c.field-meta.xml
<CustomField>
    <fullName>activity_id__c</fullName>
    <description>activity_id</description>
    <externalDeveloperName>activity_id</externalDeveloperName>
    <label>Activity_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>