force-app/main/default/objects/Archived_Activities__x/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>description</description>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>