force-app/main/default/objects/Archived_Activities__x/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <description>subject</description>
    <externalDeveloperName>subject</externalDeveloperName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>