force-app/main/default/objects/Archived_Activities__x/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>type</description>
    <externalDeveloperName>type</externalDeveloperName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>