force-app/main/default/objects/Archived_Activities__x/fields/what_id__c.field-meta.xml
<CustomField>
    <fullName>what_id__c</fullName>
    <description>what_id</description>
    <externalDeveloperName>what_id</externalDeveloperName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>