force-app/main/default/objects/Archived_Activities__x/fields/who_id__c.field-meta.xml
<CustomField>
    <fullName>who_id__c</fullName>
    <description>who_id</description>
    <externalDeveloperName>who_id</externalDeveloperName>
    <label>Contact</label>
    <length>18</length>
    <referenceTargetField>Contact.ContactId__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Archived Activities</relationshipLabel>
    <relationshipName>Archived_Activities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>